--- a/.hbuilderx/launch.json
+++ b/.hbuilderx/launch.json
@@ -6,7 +6,7 @@
                 "launchtype" : "local"
             },
             "mp-weixin" : {
-                "launchtype" : "remote"
+                "launchtype" : "local"
             },
             "provider" : "aliyun",
             "type" : "uniCloud"
